# ConsoleMenu

./: CMakeLists.txt  ConsoleMenu.vcxproj  ConsoleMenu.vcxproj.filters  console_menu.cpp  console_menu.h  main.cpp  test.cpp
x64/Debug/: ConsoleMenu.exe.recipe  ConsoleMenu.ilk  vc143.idb
x64/Debug/ConsoleMenu.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  ConsoleMenu.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
